--- a/public/assets_front/css/estilos.css
+++ b/public/assets_front/css/estilos.css
@@ -53,7 +53,9 @@ p,
 .text-color {
     color: #14488d;
 }
-
+.bg-primary {
+  background-color: #12488f!important;
+}
 .btn-primary,
 .btn-outline-primary:hover,
 .btn-outline-primary:not(:disabled):not(.disabled):active {
@@ -268,7 +270,10 @@ a.header-cart-item-name {
     .hamburger {
         display: none!important;
     }
-}
+    .main_menu li.dropdown-item {
+      padding: 0.25rem 0.25rem;
+    }
+  }
 
 .hamburger-inner,
 .hamburger-inner:after,
@@ -276,13 +281,20 @@ a.header-cart-item-name {
     width: 28px;
     height: 2px;
 }
-
+.header1 {
+  height: 180px;
+}
+.search-dropdown{
+  right: unset;
+  left: 0px;
+  transform-origin: top left;
+}
 @media (max-width:991px) {
     .fixed-header .topbar {
         display: none;
     }
     header.header1 {
-        max-height: 110px!important;
+        max-height: 166px!important;
         height: 100%!important;
     }
     .container-menu-header,
@@ -292,16 +304,31 @@ a.header-cart-item-name {
     }
     .wrap_header {
         height: 65px;
+        z-index: 1;
+    }
+    .navbar .navbar-collapse {
+      max-height: 73vh;
+      overflow: auto;
+    }
+    .nv-dropdown-bs4 .dropdown-toggle, .nv-dropdown-bs4 .dropdown-menu a {
+      padding: 3px 0!important;
+    }
+    .nv-dropdown-bs4 .dropdown-item {
+      padding: 0 0px;
     }
     .wrap_menu {
-        top: 65px;
+        top: 106px;
         position: absolute;
     }
     .main_menu {
         flex-direction: column;
         text-align: left;
         align-items: baseline;
-        box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.23);
+        box-shadow: 0;
+    }
+    .main_menu .dropdown-menu {
+      background-color: transparent;
+      border: 0;
     }
     .main_menu>li {
         padding: 10px 15px;
@@ -341,11 +368,13 @@ a.header-cart-item-name {
         color: #222;
     }
     .logo {
-        left: 12px;
+      position: initial;
+      transform: none;
     }
     .header-icons {
-        right: 0px;
-    }
+        position: static;
+        transform: none;
+      }
     .header-wrapicon {
         position: initial;
     }
@@ -504,30 +533,41 @@ li.breadcrumb-item {
     object-fit: contain;
 }
 
-@media (max-width:991px) {
-    .sidebar {
-        display: block;
-        position: fixed!important;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        width: 260px!important;
-        padding: 0;
-        -webkit-transform: translate(-260px);
-        transform: translate(-260px);
-        transition: transform .2s ease-in-out 0s;
-        background-color: #fff;
-        z-index: 9999;
-        overflow-y: auto;
-        padding: 20px 15px;
-        box-shadow: 5px 0px 15px rgba(0, 0, 0, 0.18);
-    }
-    .sidebar.show {
-        transform: translateX(0vw);
-        transition: transform .3s ease-in-out 0s;
-    }
+.sidebar {
+    display: block;
+    position: fixed!important;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 70vw!important;
+    -webkit-transform: translate(-70vw);
+    transform: translate(-70vw);
+    transition: transform .2s ease-in-out 0s;
+    background-color: #fff;
+    z-index: 9999;
+    overflow-y: auto;
+    padding: 20px 30px;
 }
 
+.sidebar.show {
+    transform: translateX(0vw);
+    transition: transform .3s ease-in-out 0s;
+}
+
+/* width */
+ .sidebar::-webkit-scrollbar {
+   width: 2px;
+ }
+
+ /* Track */
+ .sidebar::-webkit-scrollbar-track {
+   background: #f1f1f1;
+ }
+
+ /* Handle */
+ .sidebar::-webkit-scrollbar-thumb {
+   background: #888;
+ }
 
 /* producto */
 
@@ -545,7 +585,9 @@ li.breadcrumb-item {
 .tags a {
     font-size: 13px;
 }
-
+.flex-sb-m:not(.show-dropdown-content) .down-mark {
+  display: none;
+}
 
 /* servicios */
 
@@ -826,9 +868,14 @@ input.num-product {
         height: 100%;
         display: flex;
         align-items: center;
-        padding: 20px 20px;
+        padding: 0;
     }
-
+    .dropdown-menu ul.dropdown-menu {
+      padding: 0px;
+    }
+    .main_menu .dropdown-menu ul.dropdown-menu >li a {
+      padding: 0 15px!important;
+    }
     .main_menu>li.active>a {
         color: #14488d;
     }
@@ -871,15 +918,20 @@ input.num-product {
     }
 }
 @media (min-width:767px) {
-    .main_menu>li {
-        padding: 20px 11px;
-    }
+  .main_menu>li a {
+    padding: 6px 15px!important;
+  }
+  .main_menu .dropdown-menu ul.dropdown-menu a.dropdown-toggle {
+    background: #eee;
+    padding: 0.25rem 1.25rem!important;
+  }
 }
 .container-menu-header {
     background: #fff;
 }
-.main_menu>li>a {
+.navbar-light .navbar-nav.main_menu>li>a.nav-link{
     border-bottom: 0;
+    color: #333;
 }
 .prev-slick2 {
     left: 0px;
@@ -1340,9 +1392,44 @@ html {
     right: 10px;
 }
 
-/* *********************Primer noticia********************* */
-@media screen and (min-width:768px) {
-    .main_menu>li {
-        padding: 20px 9px !important;
+.nv-dropdown-bs4 .dropdown-toggle, .nv-dropdown-bs4 .dropdown-menu a {
+    cursor: pointer;
+}
+
+.nv-dropdown-bs4 .dropdown-item.active, .nv-dropdown-bs4 .dropdown-item:active {
+    color: inherit;
+    text-decoration: none;
+    background-color: inherit;
+}
+
+.nv-dropdown-bs4 .dropdown-item:focus, .nv-dropdown-bs4 .dropdown-item:hover {
+    color: #16181b;
+    text-decoration: none;
+    background-color: #f8f9fa;
+}
+
+@media (min-width: 767px) {
+    .nv-dropdown-bs4 .dropdown-toggle:not(.nav-link)::after {
+        display: inline-block;
+        width: 0;
+        height: 0;
+        margin-left: .5em;
+        vertical-align: 0;
+        border-bottom: .3em solid transparent;
+        border-top: .3em solid transparent;
+        border-left: .3em solid;
     }
+    .dropdown-menu  .dropdown-menu .dropdown-menu.show {
+      top: unset!important;
+      bottom: 0;
+    }
+}
+li.dropdown-item.dropdown {
+  padding: 0;
+}
+.nv-dropdown-bs4 .dropdown-toggle, .nv-dropdown-bs4 .dropdown-menu a {
+  padding: 0.25rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
